# uos.libs

./: .gitignore  README.md
uoslibs/: CMakeLists.txt  uoslibs.cpp
uoslibs/include/uoslibs/: test.hpp  uoslibs.hpp
